@@ -7,6 +7,8 @@
 	  should exist).  Patch from Jinmei Tatuya (Infoblox).
 	- Fix #3817: core dump happens in libunbound delete, when queued
 	  servfail hits deleted message queue.
+	- Create additional tls service interfaces by opening them on other
+	  portnumbers and listing the portnumbers as additional-tls-port: nr.
 
 13 March 2018: Wouter
 	- Fix typo in documentation.
